chore: add remote shortcode

--- a/layouts/shortcodes/content.html
+++ b/layouts/shortcodes/content.html
@@ -2,7 +2,7 @@
 {{- if $file -}}
   {{- $content := readFile (printf "layouts/shortcodes/content/%s.md" $file) -}}
   {{- if $content -}}
-    {{- $content | .Page.RenderString -}}
+    {{- $content -}}
   {{- else -}}
     {{- warnf "Content not found: %s" $file -}}
   {{- end -}}
