--- a/layouts/shortcodes/content.html
+++ b/layouts/shortcodes/content.html
@@ -1,6 +1,6 @@
 {{- $file := .Get 0 -}}
 {{- if $file -}}
-  {{- $content := readFile (printf "shared/%s.md" $file) -}}
+  {{- $content := readFile (printf "shared/%s.md" $file) | safeHTML -}}
   {{- if $content -}}
     {{- $content -}}
   {{- else -}}
