--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div class='hx-mx-auto hx-flex {{ partial "utils/page-width" . }}'>
+<div class='hx:mx-auto hx:flex hextra-max-page-width'>
   <article
     class="hx-w-full hx-break-words hx-flex hx-min-h-[calc(100vh-var(--navbar-height))] hx-min-w-0 hx-justify-center pr-[calc(env(safe-area-inset-right)-1.5rem)]">
     <main
