--- a/layouts/changelog/single.html
+++ b/layouts/changelog/single.html
@@ -1,23 +1,23 @@
 {{ define "main" }}
   {{- $effectiveOn := (T "effectiveOn") | default "Effective on " -}} {{/* i18n for strings */}}
-  <div class="hx-mx-auto hx-flex hx-max-w-screen-xl">
+  <div class="hx:mx-auto hx:flex hx:max-w-screen-xl">
     {{ partial "sidebar.html" (dict "context" . "disableSidebar" true "displayPlaceholder" false) }}
     {{ partial "toc.html" . }}
-    <article class="hx-w-full hx-break-words hx-flex hx-min-h-[calc(100vh-var(--navbar-height))] hx-min-w-0 hx-justify-center hx-pb-8 hx-pr-[calc(env(safe-area-inset-right)-1.5rem)]">
-      <main class="hx-w-full hx-min-w-0 hx-max-w-6xl hx-px-6 hx-pt-4 hx-md:px-12">
+    <article class="hx:w-full hx:break-words hx:flex hx:min-h-[calc(100vh-var(--navbar-height))] hx:min-w-0 hx:justify-center hx:pb-8 hx:pr-[calc(env(safe-area-inset-right)-1.5rem)]">
+      <main class="hx:w-full hx:min-w-0 hx:max-w-6xl hx:px-6 hx:pt-4 hx:md:px-12">
         {{ partial "breadcrumb.html" . }}
-        <h1 class="hx-mt-2 hx-text-4xl hx-font-bold hx-tracking-tight hx-text-slate-900 dark:hx-text-slate-100">{{ .Title }}</h1>
-        <div class="hx-mt-4 hx-mb-10 hx-text-gray-500 dark:hx-text-gray-400 hx-text-sm hx-flex hx-items-center hx-flex-wrap hx-gap-y-2">
-          {{- with $date := .Date }}<span class="hx-mr-1">{{ $effectiveOn }}{{ partial "utils/format-date" $date}}</span>{{ end -}}
+        <h1 class="hx:mt-2 hx:text-4xl hx:font-bold hx:tracking-tight hx:text-slate-900 dark:hx:text-slate-100">{{ .Title }}</h1>
+        <div class="hx:mt-4 hx:mb-10 hx:text-gray-500 dark:hx:text-gray-400 hx:text-sm hx:flex hx:items-center hx:flex-wrap hx:gap-y-2">
+          {{- with $date := .Date }}<span class="hx:mr-1">{{ $effectiveOn }}{{ partial "utils/format-date" $date}}</span>{{ end -}}
           {{- $lazyLoading := site.Params.enableImageLazyLoading | default true -}}
-          {{ if and .Date .Params.authors }}<span class="hx-mx-1">·</span>{{ end -}}
+          {{ if and .Date .Params.authors }}<span class="hx:mx-1">·</span>{{ end -}}
           {{- with $.Params.authors -}}
             {{- range $i, $author := . -}}
               {{- if reflect.IsMap $author -}}
-                {{- if and $i (not $author.image) }}<span class="hx-mr-1">,</span>{{ end -}}
+                {{- if and $i (not $author.image) }}<span class="hx:mr-1">,</span>{{ end -}}
                 <a
                   {{ with $author.link }}href="{{ . }}" target="_blank"{{ end }}
-                  class="hx-group hx-inline-flex hx-items-center hx-text-current hx-gap-x-1.5 hx-mx-1"
+                  class="hx:group hx:inline-flex hx:items-center hx:text-current hx:gap-x-1.5 hx:mx-1"
                   {{ with $author.name }}title="{{ . }}"{{ end }}
                 >
                   {{- with $image := $author.image }}
@@ -26,12 +26,12 @@
                     {{- if and $isLocal $startsWithSlash }}
                       {{- $image = (relURL (strings.TrimPrefix "/" $image)) -}}
                     {{ end -}}
-                    <img src="{{ $image | safeURL }}" alt="{{ $author.name }}" class="hx-inline-block hx-h-4 hx-w-4 hx-rounded-full" {{ if $lazyLoading }}loading="lazy"{{ end }} />
+                    <img src="{{ $image | safeURL }}" alt="{{ $author.name }}" class="hx:inline-block hx:h-4 hx:w-4 hx:rounded-full" {{ if $lazyLoading }}loading="lazy"{{ end }} />
                   {{ end -}}
-                  <div class="hx-group-hover:underline">{{ $author.name }}</div>
+                  <div class="hx:group-hover:underline">{{ $author.name }}</div>
                 </a>
               {{- else -}}
-                {{- if $i }}<span class="hx-mr-1">,</span>{{ end -}}<span class="hx-mx-1">{{ $author }}</span>
+                {{- if $i }}<span class="hx:mr-1">,</span>{{ end -}}<span class="hx:mx-1">{{ $author }}</span>
               {{- end -}}
             {{- end -}}
           {{- end -}}
