--- a/layouts/shortcodes/hero-button-primary.html
+++ b/layouts/shortcodes/hero-button-primary.html
@@ -7,7 +7,7 @@
 
 <a
   href="{{ $href }}"
-  class="btn-primary hx-font-medium hx-cursor-pointer hx-px-6 hx-py-3 hx-text-center hx-text-white hx-inline-block focus:hx-outline-none focus:hx-ring-4 focus:hx-ring-primary-300 dark:focus:hx-ring-primary-800 transition-all ease-in duration-200"
+  class="btn-primary hx:font-medium hx:cursor-pointer hx:px-6 hx:py-3 hx:text-center hx:text-white hx:inline-block focus:hx:outline-none focus:hx:ring-4 focus:hx:ring-primary-300 dark:focus:hx:ring-primary-800 transition-all ease-in duration-200"
   {{ with $style }}style="{{ . | safeCSS }}"{{ end }}
   {{ if $external }}target="_blank" rel="noreferrer"{{ end -}}
 >
