--- a/layouts/changelog/single.html
+++ b/layouts/changelog/single.html
@@ -1,14 +1,13 @@
 {{ define "main" }}
-  {{- $effectiveOn := (T "effectiveOn") | default "Effective on " -}} {{/* i18n for strings */}}
   <div class="hx:mx-auto hx:flex hx:max-w-screen-xl">
     {{ partial "sidebar.html" (dict "context" . "disableSidebar" true "displayPlaceholder" false) }}
     {{ partial "toc.html" . }}
     <article class="hx:w-full hx:break-words hx:flex hx:min-h-[calc(100vh-var(--navbar-height))] hx:min-w-0 hx:justify-center hx:pb-8 hx:pr-[calc(env(safe-area-inset-right)-1.5rem)]">
       <main class="hx:w-full hx:min-w-0 hx:max-w-6xl hx:px-6 hx:pt-4 hx:md:px-12">
         {{ partial "breadcrumb.html" . }}
-        <h1 class="hx:mt-2 hx:text-4xl hx:font-bold hx:tracking-tight hx:text-slate-900 dark:hx:text-slate-100">{{ .Title }}</h1>
-        <div class="hx:mt-4 hx:mb-10 hx:text-gray-500 dark:hx:text-gray-400 hx:text-sm hx:flex hx:items-center hx:flex-wrap hx:gap-y-2">
-          {{- with $date := .Date }}<span class="hx:mr-1">{{ $effectiveOn }}{{ partial "utils/format-date" $date}}</span>{{ end -}}
+        {{ if .Title }}<h1 class="hx:mt-2 hx:text-4xl hx:font-bold hx:tracking-tight hx:text-slate-900 hx:dark:text-slate-100">{{ .Title }}</h1>{{ end }}
+        <div class="hx:mt-4 hx:mb-16 hx:text-gray-500 hx:dark:text-gray-400 hx:text-sm hx:flex hx:items-center hx:flex-wrap hx:gap-y-2">
+          {{- with $date := .Date }}<span class="hx:mr-1">{{ partial "utils/format-date" $date }}</span>{{ end -}}
           {{- $lazyLoading := site.Params.enableImageLazyLoading | default true -}}
           {{ if and .Date .Params.authors }}<span class="hx:mx-1">·</span>{{ end -}}
           {{- with $.Params.authors -}}
@@ -39,10 +38,12 @@
         <div class="content">
           {{ .Content }}
         </div>
-        {{ partial "components/last-updated.html" . }}
-        {{ .Scratch.Set "reversePagination" true }}
-        {{ partial "components/pager.html" . }}
-        {{ partial "components/comments.html" . }}
+        {{- partial "components/last-updated.html" . -}}
+        {{- if (site.Params.blog.article.displayPagination | default true) -}}
+          {{- .Scratch.Set "reversePagination" (.Params.reversePagination | default true) -}}
+          {{- partial "components/pager.html" . -}}
+        {{ end }}
+        {{- partial "components/comments.html" . -}}
       </main>
     </article>
   </div>
