--- a/layouts/openapi/baseof.html
+++ b/layouts/openapi/baseof.html
@@ -1,12 +1,118 @@
 <!DOCTYPE html>
 <html lang="{{ .Site.Language.Lang }}">
-  {{- partial "openapi/head_openapi" . -}}
-  <body dir="ltr">
-    {{- partial "navbar.html" . -}}
-    {{- block "main" . }}{{ end -}}
-    {{- if or (eq .Site.Params.footer.enable nil) (.Site.Params.footer.enable) }}
-      {{ partial "footer.html" . }}
-    {{ end }}
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  {{- $noindex := .Params.noindex | default false -}}
+  {{ if and (hugo.IsProduction) (not $noindex) -}}
+  <meta name="robots" content="index, follow" />
+  {{ else -}}
+  <meta name="robots" content="noindex, nofollow" />
+  {{ end -}}
+  {{ partialCached "favicons.html" . -}}
+  <title>
+    {{- if .IsHome -}}
+    {{ .Site.Title -}}
+    {{ else -}}
+    {{ with .Title }}{{ . }} – {{ end -}}
+    {{ .Site.Title -}}
+    {{ end -}}
+  </title>
+  
+  {{- with .Params.canonical -}}
+  <link rel="canonical" href="{{ . }}" itemprop="url" />
+  {{- else -}}
+  <link rel="canonical" href="{{ .Permalink }}" itemprop="url" />
+  {{- end -}}
+
+  {{- partial "opengraph.html" . -}}
+  {{- partial "schema.html" . -}}
+  {{- partial "twitter_cards.html" . -}}
+
+  {{- $mainCss := resources.Get "css/compiled/main.css" -}}
+  {{- $customCss := resources.Get "css/custom.css" -}}
+  {{- $variablesCss := resources.Get "css/variables.css" | resources.ExecuteAsTemplate "css/variables.css" . -}}
+
+  {{- /* Production build */ -}}
+  {{- if hugo.IsProduction }}
+  {{- $styles := slice $variablesCss $mainCss $customCss | resources.Concat "css/compiled/main.css" | minify |
+  fingerprint }}
+  <link rel="preload" href="{{ $styles.RelPermalink }}" as="style" integrity="{{ $styles.Data.Integrity }}" />
+  <link href="{{ $styles.RelPermalink }}" rel="stylesheet" integrity="{{ $styles.Data.Integrity }}" />
+
+  {{- /* Theme development mode (non-production + theme environment) */ -}}
+  {{- else if eq hugo.Environment "theme" }}
+  {{- $devStyles := resources.Get "css/styles.css" | postCSS (dict "inlineImports" true) }}
+  <link href="{{ $devStyles.RelPermalink }}" rel="stylesheet" />
+  <link href="{{ $variablesCss.RelPermalink }}" rel="stylesheet" />
+  <link href="{{ $customCss.RelPermalink }}" rel="stylesheet" />
+
+  {{- /* User local development */ -}}
+  {{- else }}
+  {{- $styles := resources.Get "css/compiled/main.css" -}}
+  <link href="{{ $styles.RelPermalink }}" rel="stylesheet" />
+  <link href="{{ $variablesCss.RelPermalink }}" rel="stylesheet" />
+  <link href="{{ $customCss.RelPermalink }}" rel="stylesheet" />
+  {{- end }}
+
+  <!-- Swagger UI CSS principal -->
+  <link rel="stylesheet" href="https://unpkg.com/swagger-ui-dist@5.27.1/swagger-ui.css" />
+  <!-- CSS custom Swagger UI (si défini) -->
+  {{ $cssUrl := .Params.swagger.cssUrl }}
+  {{ if $cssUrl }}
+  <link rel="stylesheet" href="{{ $cssUrl }}" />
+  {{ end }}
+
+  <!-- Google Analytics -->
+  {{- if and hugo.IsProduction .Site.Config.Services.GoogleAnalytics.ID }}
+  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
+  {{ partial "google-analytics.html" . -}}
+  {{- end }}
+
+  <script>
+    /* Initialize light/dark mode */
+    const defaultTheme = '{{ site.Params.theme.default | default `system`}}';
+
+    const setDarkTheme = () => {
+      document.documentElement.classList.add("dark");
+      document.documentElement.style.colorScheme = "dark";
+    }
+    const setLightTheme = () => {
+      document.documentElement.classList.remove("dark");
+      document.documentElement.style.colorScheme = "light";
+    }
+
+    if ("color-theme" in localStorage) {
+      localStorage.getItem("color-theme") === "dark" ? setDarkTheme() : setLightTheme();
+    } else {
+      defaultTheme === "dark" ? setDarkTheme() : setLightTheme();
+      if (defaultTheme === "system") {
+        window.matchMedia("(prefers-color-scheme: dark)").matches ? setDarkTheme() : setLightTheme();
+      }
+    }
+  </script>
+
+  <!-- Math engine -->
+  {{ $noop := .WordCount -}}
+  {{- $engine := site.Params.math.engine | default "katex" -}}
+  {{ if and (.Page.Store.Get "hasMath") (eq $engine "katex") -}}
+  {{ partialCached "scripts/katex.html" . -}}
+  {{ else if and (.Page.Store.Get "hasMath") (eq $engine "mathjax") -}}
+  {{ partialCached "scripts/mathjax.html" . -}}
+  {{ end -}}
+
+  {{ partial "utils/page-width-override.html" . }}
+  {{ partial "custom/head-end.html" . -}}
+</head>
+
+<body dir="{{ .Site.Language.LanguageDirection | default `ltr` }}">
+  {{- partial "navbar.html" . -}}
+  {{- block "main" . }}{{ end -}}
+  {{- if or (eq .Site.Params.footer.enable nil) (.Site.Params.footer.enable) }}
+  {{ partial "footer.html" . }}
+  {{ end }}
   {{ partial "scripts.html" . }}
+</body>
+
 </html>
