--- a/layouts/openapi/single.html
+++ b/layouts/openapi/single.html
@@ -1,55 +1,38 @@
 {{ define "main" }}
-  <div class='hx:mx-auto hx:flex hextra-max-page-width'>
-    {{ partial "sidebar.html" (dict "context" . "disableSidebar" true "displayPlaceholder" false) }}
-    <article class="w-full break-words flex ">
-      <main class="w-full">
-        <div class="content">
-          {{ .Content }}
-        </div>
-        <style>
-          body > div.mx-auto.flex.max-w-full > article > main > div.content {
-          height: calc(100vh - 205px) !important;
-        }
+<div class='hx:mx-auto hx:flex hextra-max-page-width'>
+  <div id="swagger-ui"></div>
+</div>
 
-    rapi-doc::part(textbox-nav-filter) { /* <<< targets the server div */
-      background-color: rgb(0 0 0 / .05);
-    }
+<!-- Swagger UI JavaScript -->
+<script src="https://unpkg.com/swagger-ui-dist@5.27.1/swagger-ui-bundle.js" crossorigin></script>
+<script src="https://unpkg.com/swagger-ui-dist@5.27.1/swagger-ui-standalone-preset.js" crossorigin></script>
+<script>
+    window.onload = () => {
+      const config = {
+        dom_id: '#swagger-ui'
+      };
+      // ...configurations dynamiques...
+      {{ if .Params.swagger.presets }}config.presets = {{ .Params.swagger.presets | jsonify | safeJS }};{{ else }}config.presets = [SwaggerUIBundle.presets.apis, SwaggerUIStandalonePreset];{{ end }}
+      {{ if .Params.swagger.layout }}config.layout = {{ .Params.swagger.layout | jsonify | safeJS }};{{ end }}
+      {{ if .Params.swagger.url }}config.url = {{ .Params.swagger.url | jsonify | safeJS }};{{ end }}
+      {{ if .Params.swagger.urls }}config.urls = {{ .Params.swagger.urls | jsonify | safeJS }};{{ end }}
+      {{ if .Params.swagger.operationsSorter }}config.operationsSorter = {{ .Params.swagger.operationsSorter | jsonify | safeJS }};{{ end }}
+      {{ if .Params.swagger.tagsSorter }}config.tagsSorter = {{ .Params.swagger.tagsSorter | jsonify | safeJS }};{{ end }}
+      {{ if .Params.swagger.tryItOutEnabled }}config.tryItOutEnabled = {{ .Params.swagger.tryItOutEnabled }};{{ end }}
+      {{ if .Params.swagger.filter }}config.filter = {{ .Params.swagger.filter }};{{ end }}
+      {{ if .Params.swagger.supportedSubmitMethods }}config.supportedSubmitMethods = {{ .Params.swagger.supportedSubmitMethods | jsonify | safeJS }};{{ end }}
+      {{ if .Params.swagger.syntaxTheme }}config.syntaxHighlight = { theme: {{ .Params.swagger.syntaxTheme | jsonify | safeJS }} };{{ end }}
+      {{ if .Params.swagger.deepLinking }}config.deepLinking = {{ .Params.swagger.deepLinking }};{{ end }}
+      {{ if .Params.swagger.displayOperationId }}config.displayOperationId = {{ .Params.swagger.displayOperationId }};{{ end }}
+      {{ if .Params.swagger.displayRequestDuration }}config.displayRequestDuration = {{ .Params.swagger.displayRequestDuration }};{{ end }}
+      {{ if .Params.swagger.docExpansion }}config.docExpansion = {{ .Params.swagger.docExpansion | jsonify | safeJS }};{{ end }}
+      {{ if .Params.swagger.maxDisplayedTags }}config.maxDisplayedTags = {{ .Params.swagger.maxDisplayedTags }};{{ end }}
+      {{ if .Params.swagger.showExtensions }}config.showExtensions = {{ .Params.swagger.showExtensions }};{{ end }}
+      {{ if .Params.swagger.showCommonExtensions }}config.showCommonExtensions = {{ .Params.swagger.showCommonExtensions }};{{ end }}
+      {{ if .Params.swagger.defaultModelRendering }}config.defaultModelRendering = {{ .Params.swagger.defaultModelRendering | jsonify | safeJS }};{{ end }}
+      {{ if .Params.swagger.url }}config.url = {{ .Params.swagger.url | jsonify | safeJS }};{{ end }}
 
-        </style>
-          <script defer >
-            /* Initialize light/dark mode */
-            document.addEventListener("DOMContentLoaded", (event) => {
-            if (localStorage.getItem("color-theme") === "dark" || (!("color-theme" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
-              document.querySelector(".content").innerHTML = "";
-              document.querySelector(".content").innerHTML += "<rapi-doc id='api-doc' spec-url='https://api.clever-cloud.com/v2/openapi.json'     show-method-in-nav-bar='as-colored-text'     show-header = 'false'     show-info = 'false'     allow-try='true'  allow-search='true'     allow-authentication ='false'     allow-authentication='true' allow-server-selection = 'false'     allow-api-list-style-selection ='true'     nav-bg-color='#000000'  bg-color='#111'   nav-text-color='#FFFFF'    nav-hover-bg-color='#111'     nav-hover-text-color='#DEDEDE'     nav-accent-color='#5754AA'     font-size='largest'     primary-color='#5754aa'     render-style = 'focused'     regular-font = 'ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, \"Segoe UI\", Roboto, \"Helvetica Neu\", Arial, \"Noto Sans\", sans-serif'     mono-font='Monaco, \"Andale Mono\", \"Roboto Mono\", \"Consolas\"     nav-item-spacing='default'     height='85vh'     nav-active-item-marker='left-bar'    nav-accent-text-color='#A51050'    layout='column' theme='dark'     scrolling='no'   use-path-in-nav-bar='true' >  </rapi-doc>";
-            } else {
-              //When light
-              document.querySelector(".content").innerHTML = "";
-              document.querySelector(".content").innerHTML += "<rapi-doc id='api-doc' spec-url='https://api.clever-cloud.com/v2/openapi.json'     show-method-in-nav-bar='as-colored-text'     show-header = 'false'     show-info = 'false'     allow-try='true'     allow-search='true'     allow-authentication ='false'     allow-authentication='true' allow-server-selection = 'false'     allow-api-list-style-selection ='true'     nav-bg-color='#FFFFFF'     nav-text-color='#1C2045'     nav-hover-bg-color='#f1f0fb'     nav-hover-text-color='#A51050'     nav-accent-color='#DEDEDE'     nav-accent-text-color='#A51050'         font-size='largest'     primary-color='#5754AA'     render-style = 'focused'     regular-font = 'ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, \"Segoe UI\", Roboto, \"Helvetica Neu\", Arial, \"Noto Sans\", sans-serif'     mono-font='Monaco, \"Andale Mono\", \"Roboto Mono\", \"Consolas\" monospace'     nav-item-spacing='default'     layout='column'     scrolling='no' nav-active-item-marker='left-bar' use-path-in-nav-bar='true'> </rapi-doc>";
-            }
-            });
-          </script>
-          <script defer>
-            /** 
-             * FIXME: 
-             * This is a temporary solution to an issue caused by 3rd party scripts.
-             * Once they fix the issue, we should remove this.
-             *
-             * see https://github.com/CleverCloud/documentation/issues/218 for more info
-             */
-            document.addEventListener("DOMContentLoaded", (event) => {
-              const rapiDocElement = document.getElementById('api-doc');
-              rapiDocElement.addEventListener('keydown', (event) => {
-                const formElementTagNames = ['INPUT', 'SELECT', 'TEXTAREA', 'BUTTON'];
-                const triggerElement = event.composedPath()[0];
-                
-                if (formElementTagNames.includes(triggerElement.tagName)) {
-                  event.stopPropagation();
-                }
-              });
-            })
-          </script>
-      </main>
-    </article>
-  </div>
+      window.ui = SwaggerUIBundle(config);
+  };
+</script>
 {{ end }}
