--- a/layouts/openapi/baseof.html
+++ b/layouts/openapi/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ .Site.Language.Lang }}">
+<html lang="{{ .Site.Language.Lang }}" dir="{{ .Site.Language.LanguageDirection | default `ltr` }}">
 
 <head>
   <meta charset="utf-8" />
@@ -19,7 +19,8 @@
     {{ .Site.Title -}}
     {{ end -}}
   </title>
-  
+  <meta name="description" content="{{ partial "utils/page-description.html" . }}" />
+
   {{- with .Params.canonical -}}
   <link rel="canonical" href="{{ . }}" itemprop="url" />
   {{- else -}}
@@ -64,32 +65,32 @@
   <link rel="stylesheet" href="{{ $cssUrl }}" />
   {{ end }}
 
-  <!-- Google Analytics -->
-  {{- if and hugo.IsProduction .Site.Config.Services.GoogleAnalytics.ID }}
-  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
-  {{ partial "google-analytics.html" . -}}
-  {{- end }}
+  {{ partial "components/analytics/analytics.html" . }}
 
   <script>
-    /* Initialize light/dark mode */
-    const defaultTheme = '{{ site.Params.theme.default | default `system`}}';
+    // The section must not be in the theme.js file because it can create a quick flash (switch between light and dark).
 
-    const setDarkTheme = () => {
-      document.documentElement.classList.add("dark");
-      document.documentElement.style.colorScheme = "dark";
-    }
-    const setLightTheme = () => {
-      document.documentElement.classList.remove("dark");
-      document.documentElement.style.colorScheme = "light";
-    }
+    function setTheme(theme) {
+      document.documentElement.classList.remove("light", "dark");
 
-    if ("color-theme" in localStorage) {
-      localStorage.getItem("color-theme") === "dark" ? setDarkTheme() : setLightTheme();
-    } else {
-      defaultTheme === "dark" ? setDarkTheme() : setLightTheme();
-      if (defaultTheme === "system") {
-        window.matchMedia("(prefers-color-scheme: dark)").matches ? setDarkTheme() : setLightTheme();
+      if (theme !== "light" && theme !== "dark") {
+        theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "dark" : "light";
       }
+
+      document.documentElement.classList.add(theme);
+      document.documentElement.style.colorScheme = theme;
+    }
+
+    setTheme("color-theme" in localStorage ? localStorage.getItem("color-theme") : '{{ site.Params.theme.default | default `system`}}')
+
+  </script>
+
+  <script>
+    // The section must not be in the banner.js file because it can create a quick flash.
+
+    if (localStorage.getItem('{{ site.Params.banner.key | default `banner-closed` }}')) {
+      document.documentElement.style.setProperty("--hextra-banner-height", "0px");
+      document.documentElement.classList.add("hextra-banner-hidden");
     }
   </script>
 
@@ -106,7 +107,7 @@
   {{ partial "custom/head-end.html" . -}}
 </head>
 
-<body dir="{{ .Site.Language.LanguageDirection | default `ltr` }}">
+<body>
   {{- partial "navbar.html" . -}}
   {{- block "main" . }}{{ end -}}
   {{- if or (eq .Site.Params.footer.enable nil) (.Site.Params.footer.enable) }}
